--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>website_russian_roulet</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Скачать файл</title>
 </head>
 <body>
-  <download src="
+    <h2>Скачать Russian Roulette</h2>
+    <a href="russian_roulette.py" download>
+        <button>Скачать</button>
+    </a>
 </body>
+</html>
